kube/01-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pfc
  labels:
    name: pfc
