kube/07.1-deployment_api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-dp
  namespace: pfc
  labels:
    app: pfc-api

spec:
  selector:
    matchLabels:
      app: pfc-api
  replicas: 1
  template:
    metadata:
      labels:
        app: pfc-api
    spec:
      nodeSelector:
        role: "server"
      containers:
        - name: pfc-api
          image: kennycallado/sensacion_api:v4-slim-arm64
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
