kube/07.2-deployment_web.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-dp
  namespace: pfc
  labels:
    app: pfc-web

spec:
  selector:
    matchLabels:
      app: pfc-web
  replicas: 1
  template:
    metadata:
      labels:
        app: pfc-web
          
    spec:
      nodeSelector:
        role: "server"
      containers:
        - name: pfc-web
          image: kennycallado/sensacion_web:v1-nginx-arm64
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
