kube/04.1-service_api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: pfc

spec:
  ports:
    - name: http
      port: 80
  selector:
    app: pfc-api
