kube/04.2-service_web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: pfc

spec:
  ports:
    - name: http
      port: 80
  selector:
    app: pfc-web
