kube/05-service_database.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgresdb
  namespace: pfc

spec:
  type: ExternalName
  externalName: db-postgres-svc.db-postgres.svc.cluster.local
  ports:
    - port: 5432
