kube/06-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pfc-ing-tls
  namespace: pfc
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/issuer: letsencrypt-prod
    traefic.ingress.kubernetes.io/router.tls: "true"

spec:
  tls:
  - hosts:
    - api.sensacion.kennycallado.dev
    - sensacion.kennycallado.dev
    secretName: test-ing-tls
  rules:
    - host: sensacion.kennycallado.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-svc
                port:
                  number: 80

    - host: api.sensacion.kennycallado.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-svc
                port:
                  number: 80
